--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loading-skeleton": "^3.0.3",
+    "react-paginate": "^8.1.2",
     "react-query": "^3.34.19",
     "react-router-dom": "^6.2.2",
     "styled-components": "^5.3.5"
